fixed UnalignedAddressException in constantPool #1